[package]
name = "frozen"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode.workspace = true
cfg-if.workspace = true
serde = { workspace=true, features = ["derive"] }
serde_derive = { workspace=true}

solana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-logger.workspace = true

[features]
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]

[lints]
workspace = true
