[package]
name = "loader"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
agave-xdp.workspace = true
agave-xdp-ebpf.workspace = true
solana-logger = "3.0.0"
tokio = {workspace = true, features = ["full"]}
env_logger = "0.10.0"

[lints]
workspace = true
