[package]
name = "wire_format"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true

clap = {version="4.5.28", features=["derive"]}
hxdmp = "0.2.1"
log.workspace = true
pcap-file = "2.0.0"
pkts = "0.2.1"
rayon.workspace = true
rscap = "0.2.2"
serde = { workspace = true, features = ["derive"] }
signal-hook.workspace = true
solana-gossip.workspace = true
solana-logger.workspace = true
solana-net-utils.workspace = true
solana-perf.workspace = true
solana-pubkey.workspace = true
solana-sanitize.workspace = true
solana-streamer.workspace = true
strum = { workspace = true, features = ["derive"] }

[lints]
workspace = true
