[package]
name = "wire_format"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true

clap = {version="4.5.28", features=["derive"]}
hxdmp = "0.2.1"
log.workspace = true
pcap-file = "2.0.0"
pkts = "0.2.1"
rayon.workspace = true
rscap = "0.3.1"
serde = { workspace = true, features = ["derive"] }
solana-gossip.workspace = true
solana-core.workspace = true
solana-ledger.workspace = true
solana-logger.workspace = true
solana-net-utils = { workspace = true, features = ["dev-context-only-utils"] }
solana-perf.workspace = true
solana-pubkey = { workspace = true, features = ["serde"] }
solana-sanitize.workspace = true
solana-streamer.workspace = true
indicatif.workspace = true
strum = { workspace = true, features = ["derive"] }

aya = "0.13"
aya-log = "0.2"
wf-common = { path = "wf_common", features = ["user"] }
libc = "0.2"
tokio = { workspace=true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "fs", "sync"] }
pcap-file-tokio = "0.1.0"
network-interface = "2.0.0"
rustyline = "15.0.0"
derive_more.workspace = true
iocraft = "0.7.2"
crossbeam-channel.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
arrayvec.workspace = true
solana-metrics.workspace = true
[lints]
workspace = true
