[package]
name = "wire_format"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
aya = "0.13"
aya-log = "0.2"
bincode.workspace = true
bytemuck = { workspace = true, features = ["bytemuck_derive"] }
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5.28", features = ["derive"] }
crossbeam-channel.workspace = true
derive_more.workspace = true
hxdmp = "0.2.1"
indicatif.workspace = true
iocraft = "0.7.2"
libc = "0.2"
log.workspace = true
network-interface = "2.0.0"
network-types = "0.0.7"
pcap-file = "2.0.0"
pcap-file-tokio = "0.1.0"
pkts = "0.2.1"
rayon.workspace = true
rscap = "0.3.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
solana-core.workspace = true
solana-gossip.workspace = true
solana-ledger.workspace = true
solana-logger.workspace = true
solana-metrics.workspace = true
solana-net-utils = { workspace = true, features = ["dev-context-only-utils"] }
solana-perf.workspace = true
solana-pubkey = { workspace = true, features = ["serde"] }
solana-sanitize.workspace = true
solana-streamer.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "fs",
    "sync",
] }
tokio-util.workspace = true
wf-common = { path = "wf_common", features = ["user"] }
wincode.workspace = true
[lints]
workspace = true
